k8s/environments/nonprod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corecommerce-web
spec:
  template:
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: corecommerce-web
          imagePullPolicy: Always
          startupProbe:
            failureThreshold: 15
